0.1.15

2013-05-10  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fix automake to add -DNOCURL when compiling quickmaillight
	* fix autoconf to allow compiling with per-target flags

0.1.14

2013-05-03  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added header line for body: Content-Disposition: inline

2013-04-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* use angle brackets with CURLOPT_MAIL_FROM/CURLOPT_MAIL_RCPT

2013-04-15  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added command line options -u username -w password

0.1.13

2013-04-04  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added man page for application (quickmail.1)

2013-03-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* introduced dual licensing (GPL/commercial) and added License.txt

2013-02-17  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed usage info in command line help (missing -m short help)
	* added version information of libcurl library (and dependancies)
	* undo previous change to use LF instead of CRLF, see RFC 2822

0.1.12

2013-02-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed a memory leak in quickmail_get_data when handling body data
	* use LF instead of CRLF in headers (fixes a specific test case)
	* quickmail program now accepts body from stdin if not supplied
	* quickmail program now checks if at least 1 destination is supplied

2013-02-13  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed bugs in custom body/attachment handling
	* changes to support Microsoft Visual C as proposed by Troels K.

2013-02-12  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* changes to support Microsoft Visual C as proposed by Troels K.

2012-11-24  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added -m command line parameter for MIME type of body

0.1.11

2012-11-23  Brecht Sanders  <brechtsanders@users.sourceforge.net>
